# eqwalizer

./: CONTRIBUTING.md  FAQ.md  README.md
.github/workflows/: ci.yml  release.yml
docs/: reference.md
docs/reference/: advanced.md  errors.md  escape.md  generics.md  gradual.md  modes.md  narrowing.md  overrides.md  shortcomings.md  stats.md  subtyping.md  types.md
eqwalizer/: .gitignore  .scalafmt.conf  build.sbt
eqwalizer/project/: plugins.sbt
eqwalizer/src/main/resources/: application.conf
eqwalizer/src/test/resources/: application.conf
eqwalizer/test_projects/: .gitignore  .rebar.root  rebar.config
eqwalizer/test_projects/_cli/: any_arity_fun_types.cli  approximated_maps.cli  bad_prop_types.cli  check02.cli  check07.cli  checkable_funs.cli  detached_specs.cli  discarded_specs.cli  fix_me_specs.cli  fun_overloaded_fun_specs.cli  generic_overloaded_fun_specs.cli  help.cli  includes.json  invalids.cli  lambdas.cli  long_errors.cli  misc.json  negated_type_predicates.cli  nullary_unspecced.cli  numbers.cli  op_types.cli  opaque.elp.json  otp_funs.cli  overloaded_fun_specs.cli  pinned.cli  refine.elp.json  refined_record_types.cli  repeated_vars.cli  smoke.cli  stats.json  try_of.cli  unions_with_type_vars.cli  unspecced_callback_impls.cli
eqwalizer/test_projects/check/include/: my_header.hrl
eqwalizer/test_projects/check/src/: any_fun_type.erl  any_fun_type.erl.check  apply_none.erl  apply_none.erl.check  as_pat.erl  as_pat.erl.check  auto_imports.erl  auto_imports.erl.check  behave.erl  behave.erl.check  binaries.erl  binaries.erl.check  callbacks1_pos.erl  callbacks1_pos.erl.check  callbacks3_neg.erl  callbacks3_neg.erl.check  callbacks4_neg.erl  callbacks4_neg.erl.check  callbacks5_neg.erl  callbacks5_neg.erl.check  callbacks6_neg.erl  callbacks6_neg.erl.check  callbacks7_overload_pos.erl  callbacks7_overload_pos.erl.check  case_predicates.erl  case_predicates.erl.check  check.app.src  compiler_macro.erl  compiler_macro.erl.check  comprehensions.erl  comprehensions.erl.check  contravariant.erl  contravariant.erl.check  custom.erl  custom.erl.check  detached_specs1.erl  detached_specs1.erl.check  detached_specs2.erl  detached_specs2.erl.check  dyn_remote_funs.erl  (+124 more)
eqwalizer/test_projects/check/test/: check_SUITE.erl  check_SUITE.erl.check
eqwalizer/test_projects/check_gradual/src/: approx.erl  approx.erl.check  booleans.erl  booleans.erl.check  check_gradual.app.src  dyn_calls.erl  dyn_calls.erl.check  dynamic_callbacks_1.erl  (+43 more)
eqwalizer/test_projects/eqwater/: readme.md
eqwalizer_rebar3/: .gitignore  README.md
eqwalizer_rebar3/src/: eqwalizer_build_info_prv.erl
eqwalizer_support/: .gitignore  README.md
eqwalizer_support/src/: eqwalizer.erl  eqwalizer_specs.erl  eqwalizer_support.app.src
mini-elp/: Cargo.toml  rustfmt.toml
mini-elp/.cargo/: config.toml
mini-elp/crates/base_db/: Cargo.toml
mini-elp/crates/base_db/src/: input.rs  lib.rs  module_index.rs
mini-elp/crates/elp/: Cargo.toml
mini-elp/crates/elp/src/: arc_types.rs  convert.rs  lib.rs  reload.rs
mini-elp/crates/elp/src/resources/test/: help.stderr
mini-elp/crates/elp/src/resources/test/parse_error/: eqwalize_all_diagnostics.jsonl  eqwalize_elpt2_reference_nonexistent.pretty  eqwalize_parse_error_a.pretty  eqwalize_parse_error_a_reference_bad.pretty
mini-elp/crates/elp/src/resources/test/standard/: eqwalize_all_diagnostics.jsonl  eqwalize_all_diagnostics.pretty  eqwalize_all_diagnostics_with_changed.jsonl  eqwalize_all_parse_error.jsonl  eqwalize_all_strict_diagnostics.pretty  eqwalize_app_a.pretty  eqwalize_app_a_lists_fast.pretty  eqwalize_app_a_mod2.pretty  eqwalize_app_a_mod2_diagnostics.jsonl  eqwalize_app_a_mod2_diagnostics_lsp.jsonl  eqwalize_app_a_mod2_fast.pretty  eqwalize_app_diagnostics.pretty  eqwalize_meinong.pretty
mini-elp/crates/eqwalizer/: Cargo.toml  build.rs
mini-elp/crates/eqwalizer/src/: ipc.rs  lib.rs
mini-elp/crates/ide/: Cargo.toml
mini-elp/crates/ide/src/: lib.rs
mini-elp/crates/ide_db/: Cargo.toml
mini-elp/crates/ide_db/src/: eqwalizer.rs  erl_ast.rs  fixmes.rs  lib.rs  line_index.rs
mini-elp/crates/parse_server/: Cargo.toml  build.rs
mini-elp/crates/parse_server/fixtures/: error.erl  error.expected  error_attr.erl  error_attr.expected  misplaced_comment_error.erl  misplaced_comment_error.expected  regular.erl  regular.expected  structured_comment.erl  structured_comment.expected
mini-elp/crates/parse_server/src/: lib.rs
mini-elp/crates/project_model/: Cargo.toml
mini-elp/crates/project_model/src/: lib.rs
mini-elp/parse_server/: .gitignore  rebar.config
mini-elp/parse_server/src/: elp_epp.erl  elp_lint.erl  elp_metadata.erl  elp_parse.yrl  elp_scan.erl  parse_server.app.src  parse_server.erl
mini-elp/test_projects/: .gitignore
mini-elp/test_projects/eqwalizer/src/: eqwalizer.app.src  eqwalizer_specs.erl
mini-elp/test_projects/parse_error/: .gitignore  rebar.config
mini-elp/test_projects/parse_error/eqwalizer/src/: eqwalizer_specs.erl
mini-elp/test_projects/parse_error/eqwalizer_rebar3/src/: eqwalizer_rebar3.app.src  eqwalizer_rebar3.erl
mini-elp/test_projects/parse_error/parse_error_a/src/: parse_error_a.app.src  parse_error_a.erl  parse_error_a_bad.erl  parse_error_a_reference_bad.erl  parse_error_a_syntax_error.erl  parse_error_a_worst.erl
mini-elp/test_projects/standard/: build_info.json  rebar.config
mini-elp/test_projects/standard/app_a/extra/: app_a.erl
mini-elp/test_projects/standard/app_a/include/: app_a.hrl
mini-elp/test_projects/standard/app_a/src/: app_a.app.src  app_a.erl  app_a_errors_generated.erl  app_a_lists.erl  app_a_mod2.erl  app_a_no_errors.erl  app_a_no_errors_generated.erl  app_a_no_errors_opted_in.erl
mini-elp/test_projects/standard/app_a/test/: app_a_SUITE.erl  app_a_test_helpers.erl  app_a_test_helpers_not_opted_in.erl  app_test_helpers_no_errors.erl
mini-elp/test_projects/standard/app_b/src/: app_b.app.src  app_b.erl
mini-elp/test_projects/standard/eqwalizer/src/: eqwalizer.erl
mini-elp/test_projects/standard/eqwalizer_rebar3/src/: eqwalizer_build_info_prv.erl
(+268 files in other folders)
