[workspace]
members = [
    "crates/*",
]
default-members = ["crates/elp"]

[workspace.package]
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.56"
codespan-reporting = "0.11.1"
crossbeam-channel = "0.5.4"
eetf = "0.8"
env_logger = "0.9.0"
expect-test = "1.2.2"
fxhash = "0.2.1"
indicatif = {version = "0.16.2", features = ["rayon"]}
jemallocator = {version = "0.4.3", package = "tikv-jemallocator"}
jod-thread = "0.1.2"
lazy_static = "1.4.0"
log = "0.4.16"
lsp-types = "0.93.0"
paths = {git = "https://github.com/rust-analyzer/rust-analyzer", rev = "2022-04-04"}
pico-args = "0.4.2"
profile = {features = ["jemalloc"], git = "https://github.com/rust-analyzer/rust-analyzer", rev = "2022-04-04"}
rayon = "1.5.1"
salsa = "0.17.0-pre.2"
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
smol_str = "0.1.21"
stdx = {git = "https://github.com/rust-analyzer/rust-analyzer", rev = "2022-04-04"}
tempfile = "3.3.0"
timeout-readwrite = "0.3.1"
text-size = "1.1.0"
vfs = {git = "https://github.com/rust-analyzer/rust-analyzer", rev = "2022-04-04"}
vfs-notify = {git = "https://github.com/rust-analyzer/rust-analyzer", rev = "2022-04-04"}
walkdir = "2.3.2"
