[workspace]
members = [
    "crates/*",
]
default-members = ["crates/elp"]

[workspace.package]
edition = "2021"
version = "0.17.16"

[workspace.dependencies]
anyhow = "1.0.69"
codespan-reporting = "0.11.1"
crossbeam-channel = "0.5.7"
eetf = "0.8.0"
env_logger = "0.10.0"
expect-test = "1.4.1"
fxhash = "0.2.1"
indicatif = {version = "0.17.3", features = ["rayon"]}
jemallocator = {version = "0.5.0", package = "tikv-jemallocator"}
jod-thread = "0.1.2"
lazy_static = "1.4.0"
log = "0.4.17"
lsp-types = "0.94.0"
paths = {git = "https://github.com/rust-analyzer/rust-analyzer", rev = "2022-09-05"}
pico-args = "0.5.0"
rayon = "1.7.0"
salsa = "0.17.0-pre.2"
serde = {version = "1.0.155", features = ["derive"]}
serde_json = "1.0.94"
smol_str = "0.1.24"
stdx = {git = "https://github.com/rust-analyzer/rust-analyzer", rev = "2022-09-05"}
tempfile = "3.4.0"
test-case = "3.0.0"
test-env-helpers = { git = "https://github.com/perehonchuk/test-env-helpers" }
timeout-readwrite = "0.3.3"
text-size = "1.1.0"
vfs = {git = "https://github.com/rust-analyzer/rust-analyzer", rev = "2022-09-05"}
vfs-notify = {git = "https://github.com/rust-analyzer/rust-analyzer", rev = "2022-09-05"}
walkdir = "2.3.2"
