[package]
edition = "2018"
name = "elp_base_db"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
elp_project_model = {path = "../project_model"}

eetf = "0.8.0"
env_logger = "0.9.0"
fxhash = "0.2.1"
log = "0.4.16"
paths = {git = "https://github.com/rust-analyzer/rust-analyzer", rev = "2022-04-04"}
profile = {features = ["jemalloc"], git = "https://github.com/rust-analyzer/rust-analyzer", rev = "2022-04-04"}
salsa = "0.17.0-pre.2"
smol_str = "0.1.21"
stdx = {git = "https://github.com/rust-analyzer/rust-analyzer", rev = "2022-04-04"}
text-size = "1.1.0"
vfs = {git = "https://github.com/rust-analyzer/rust-analyzer", rev = "2022-04-04"}

[dev-dependencies]
expect-test = "1.2.2"
