[package]
edition.workspace = true
name = "elp_base_db"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
elp_project_model = {path = "../project_model"}

eetf.workspace = true
env_logger.workspace = true
fxhash.workspace = true
log.workspace = true
paths.workspace = true
profile.workspace = true
salsa.workspace = true
smol_str.workspace = true
stdx.workspace = true
text-size.workspace = true
vfs.workspace = true

[dev-dependencies]
expect-test.workspace = true
