[package]
autobins = false
edition = "2018"
name = "elp"
version = "0.5.30-dev"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "elp"
path = "src/bin/main.rs"

[dependencies]
elp_eqwalizer = {path = "../eqwalizer"}
elp_ide_db = {path = "../ide_db"}
elp_ide = {path = "../ide"}
elp_project_model = {path = "../project_model"}
elp_parse_server = {path = "../parse_server"}

always-assert = "0.1.2"
anyhow = "1.0.56"
codespan-reporting = "0.11.1"
crossbeam-channel = "0.5.4"
env_logger = "0.9.0"
fxhash = "0.2.1"
indicatif = {version = "0.16.2", features = ["rayon"]}
itertools = "0.10.3"
lazy_static = "1.4.0"
log = "0.4.16"
lsp-types = "0.93.0"
pico-args = "0.4.2"
profile = {features = ["jemalloc"], git = "https://github.com/rust-analyzer/rust-analyzer", rev = "2022-04-04"}
rayon = "1.5.1"
regex = "1.5.5"
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
serde_path_to_error = "0.1.7"
stdx = {git = "https://github.com/rust-analyzer/rust-analyzer", rev = "2022-04-04"}
tempfile = "3.3.0"
text_edit = {git = "https://github.com/rust-analyzer/rust-analyzer", rev = "2022-04-04"}
text-size = "1.1.0"
vfs-notify = {git = "https://github.com/rust-analyzer/rust-analyzer", rev = "2022-04-04"}

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = {version = "0.4.3", package = "tikv-jemallocator"}

[dev-dependencies]
expect-test = "1.2.2"
