[package]
autobins = false
edition.workspace = true
name = "elp"
version = "0.5.30-dev"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "elp"
path = "src/bin/main.rs"

[dependencies]
elp_eqwalizer = {path = "../eqwalizer"}
elp_ide_db = {path = "../ide_db"}
elp_ide = {path = "../ide"}
elp_project_model = {path = "../project_model"}
elp_parse_server = {path = "../parse_server"}

anyhow.workspace = true
codespan-reporting.workspace = true
crossbeam-channel.workspace = true
env_logger.workspace = true
fxhash.workspace = true
indicatif.workspace = true
lazy_static.workspace = true
log.workspace = true
lsp-types.workspace = true
pico-args.workspace = true
profile.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
stdx.workspace = true
tempfile.workspace = true
text-size.workspace = true
vfs-notify.workspace = true

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator.workspace = true

[dev-dependencies]
expect-test.workspace = true
