[package]
name = "elp_eqwalizer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
fxhash = "0.2.1"
stdx = {git = "https://github.com/rust-analyzer/rust-analyzer", rev = "2022-04-04"}
serde = { version = "1.0.136", features = ["derive"] }
log = "0.4.16"
serde_json = "1.0.79"
tempfile = "3.3.0"
text-size = "1.1.0"
timeout-readwrite = "0.3.1"
