[package]
name = "elp_eqwalizer"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
fxhash.workspace = true
stdx.workspace = true
serde.workspace = true
log.workspace = true
serde_json.workspace = true
tempfile.workspace = true
text-size.workspace = true
timeout-readwrite.workspace = true
