[package]
name = "elp_eqwalizer"
edition.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
fxhash.workspace = true
stdx.workspace = true
serde.workspace = true
log.workspace = true
serde_json.workspace = true
tempfile.workspace = true
text-size.workspace = true
timeout-readwrite.workspace = true
