[package]
edition = "2018"
name = "elp_ide"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elp_ide_db = {path = "../ide_db"}
elp_project_model = {path = "../project_model"}

anyhow = "1.0.56"

[dev-dependencies]
env_logger = "0.9.0"
expect-test = "1.2.2"
