[package]
edition.workspace = true
name = "elp_ide"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elp_ide_db = {path = "../ide_db"}
elp_project_model = {path = "../project_model"}

anyhow.workspace = true

[dev-dependencies]
env_logger.workspace = true
expect-test.workspace = true
