[package]
name = "elp_ide_db"
edition.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elp_base_db = {path = "../base_db"}
elp_eqwalizer = {path = "../eqwalizer"}
elp_parse_server = {path = "../parse_server"}
elp_project_model = {path = "../project_model"}

anyhow.workspace = true
crossbeam-channel.workspace = true
eetf.workspace = true
fxhash.workspace = true
log.workspace = true
salsa.workspace = true
serde.workspace = true
serde_json.workspace = true
stdx.workspace = true
text-size.workspace = true
tempfile.workspace = true

[dev-dependencies]
expect-test.workspace = true
