[package]
name = "elp_parse_server"
edition.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
crossbeam-channel.workspace = true
eetf.workspace = true
fxhash.workspace = true
jod-thread.workspace = true
log.workspace = true
stdx.workspace = true
tempfile.workspace = true
text-size.workspace = true

[dev-dependencies]
expect-test.workspace = true
lazy_static.workspace = true
