[package]
edition.workspace = true
name = "elp_project_model"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
eetf.workspace = true
fxhash.workspace = true
lazy_static.workspace = true
log.workspace = true
paths.workspace = true
tempfile.workspace = true
walkdir.workspace = true
