[package]
name = "elp_project_model"
edition.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
eetf.workspace = true
fxhash.workspace = true
lazy_static.workspace = true
log.workspace = true
paths.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
walkdir.workspace = true
